# clash-problem-example

./: .gitignore  README.md  flake.nix  shell.nix
clash/: problem-example.cabal  test_output
clash/lib/: Top.hs
clash/sim/: test_top.py
clash/test/: TestFuncs.hs  Tests.hs
cocotb_lib/: setup.py
cocotb_lib/cocotb_lib/: __init__.py  copy_axil.sh
cocotb_lib/cocotb_lib/address_space/: __init__.py
cocotb_lib/cocotb_lib/axi_channels/: __init__.py
cocotb_lib/cocotb_lib/axi_master/: __init__.py
cocotb_lib/cocotb_lib/axi_ram/: __init__.py
cocotb_lib/cocotb_lib/axi_slave/: __init__.py
cocotb_lib/cocotb_lib/axil_channels/: __init__.py
cocotb_lib/cocotb_lib/axil_master/: __init__.py
cocotb_lib/cocotb_lib/axil_ram/: __init__.py
cocotb_lib/cocotb_lib/axil_slave/: __init__.py
cocotb_lib/cocotb_lib/axis/: __init__.py  axis.py
cocotb_lib/cocotb_lib/buddy_allocator/: __init__.py
cocotb_lib/cocotb_lib/constants/: constants.py
cocotb_lib/cocotb_lib/eth_mac/: __init__.py  eth_mac.py
cocotb_lib/cocotb_lib/gmii/: __init__.py
cocotb_lib/cocotb_lib/ip_ep/: __init__.py  ip_ep.py  test_ip_ep.py  test_ip_ep.v
cocotb_lib/cocotb_lib/mii/: __init__.py
cocotb_lib/cocotb_lib/ptp/: __init__.py
cocotb_lib/cocotb_lib/rgmii/: __init__.py
cocotb_lib/cocotb_lib/sparse_memory/: __init__.py
cocotb_lib/cocotb_lib/stream/: stream.py
cocotb_lib/cocotb_lib/tcp_ep/: __init__.py  tcp_ep.py  test_tcp_ep.py  test_tcp_ep.v
cocotb_lib/cocotb_lib/utils/formatters/: formatters.py
cocotb_lib/cocotb_lib/xgmii/: __init__.py  xgmii.py
nix/: cocotb_lib.nix  cocotb_test.nix  nixpkgs.nix  sources.json
